@@ -3,6 +3,8 @@ Revision history for RPi-I2C
 2.3604 UNREL
         - removed WiringPi::API from being a prereq
         - POD fixes
+        - added UNIT TESTS section in POD to explain why there's no unit tests
+          for this distribution
 
 2.3603  2017-06-23
         - completely changed the way we work. We do not use wiringPi for this
